Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-20574

Position of events reported by mysqlbinlog is wrong with encrypted binlogs, SHOW BINLOG EVENTS reports the correct one.

Details

    Description

      Using encrypted binlogs it was impossible to point a Slave to the Master getting error:

      2019-09-09 5:55:23 139739348764416 [ERROR] Error reading packet from server: log event entry exceeded max_allowed_packet; Increase max_allowed_packet on master; the first event 'mysql-binlog.016054' at 763411303, the last event read from 'mysql-binlog.nnnnn' at xxxxxxx, the last byte read from 'mysql-binlog.nnnnn at yyyyyyy. (server_errno=1236)

      The error message is misleading because it's just due to pointing to a wrong position.

      Using the positions reported by SHOW BINLOG EVENTS worked.

      Attachments

        1. config-sql.txt
          0.7 kB
          Claudio Nanni
        2. mysqlbinlog.txt
          4 kB
          Claudio Nanni
        3. show_binlog_events.txt
          3 kB
          Claudio Nanni

        Activity

          People

            sachin.setiya.007 Sachin Setiya (Inactive)
            claudio.nanni Claudio Nanni
            Votes:
            2 Vote for this issue
            Watchers:
            7 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Git Integration

                Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.